name:                hasql-lo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/christopherbiscardi/hasql-lo#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Biscardi
maintainer:          chris@christopherbiscardi.com
copyright:           Chris Biscardi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Hasql.LO
                     , Hasql.LO.Query
                     , Hasql.LO.Types
  build-depends:       base >= 4.7 && < 5
                     , hasql
                     , hasql-transaction
                     , hasql-th
                     , hasql-pool
                     , contravariant
                     , contravariant-extras
                     , bytestring
  default-language:    Haskell2010

test-suite hasql-lo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasql-lo
                     , hasql
                     , hasql-transaction
                     , hasql-th
                     , hasql-pool
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/christopherbiscardi/hasql-lo
